2006-07-08  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/keyfile.c: Fix saving the terminal tool on quitting.


2006-07-08  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/encodings.c: Made encoding descriptions translatable.


2006-07-07  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/prefs.c: Fixed bug when saving VTE settings.
 * src/keybindings.c, src/utils.c, src/callbacks.c, src/geany.h,
   src/prefs.c, src/keyfile.c:
   Improved behaviour of toggle sidebar after a restart.
   Introduced new flag sidebar_visible, renamed configuration keys.


2006-07-06  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/keybindings.c, src/keybindings.h, src/dialogs.c:
   Add keybinding for Make object, update Make descriptions.


2006-07-05  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/sciwrappers.c: Make sci_goto_line_scroll work better with
                      line wrapping and folding.
 * src/callbacks.c, src/dialogs.c:
   Add Make object command to compile the current file.
   Added some separators and renamed Build with make items.


2006-07-03  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/utils.c, src/dialogs.c:
   Fix a problem with the recent files menu.
 * src/utils.c, src/sciwrappers.c, src/sciwrappers.h:
   Scroll to 1/4 of visible lines when going to a line number.


2006-07-03  Enrico Tröger  <enrico.troeger@uvena.de>

 * doc/Makefile.am: Fixed wrong dependency in target 'install'.


2006-07-02  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/callbacks.c, src/msgwindow.c, src/utils.c:
   Improved "Find usage", so it displays not "null" for unsaved files
   in the results, and unsaved file are also clickable.
 * geany.glade, src/interface.c, src/geany.h, src/keyfile.c,
   src/prefs.c, src/dialogs.c, src/main.c:
   Little redesign of the preferences dialog.
   New options for setting the placement of notebook tabs.
 * doc/Makefile.am: Minor improvements.